app/content/themes/default/css/style.css
/* ... */
/* == */

/* HEADER */
/* ------------------------------- */

/* main-wrapper */
.main-wrapper {
  width: 100%;
  min-width: 260px; /* to show scroll for small size browsers ;) */
}
/* -- */

/* top-bar */
.top-bar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 50px;
  font-size: 12px;
  line-height: 50px;
  background: #fff2cc;
  color: #333;
  z-index: 1001;
}
@media (min-width: 768px) {
  .top-bar {
    font-size: 13px;
  }
  .top-bar .col-sm-5 {
    text-align: right;
  }
}
.top-bar.danger {
  background: #ce3426;
  color: #fff;
}
.top-bar.danger a {
  color: #fff200;
}
.top-bar.danger a:hover {
  text-decoration: underline;
}
/* -- */

/* main-header */
.main-header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 370px;
  z-index: 1001;
}

.main-header .brand-bar {
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  background-image: url("../images/main-background-min.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.main-header .menu-bar {
  background-color: #000;
  height: 70px;
}

body.night-mode:not(.visitor) .main-header {
  background: var(--header-bg-color-dark);
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
}

/* ** fix bootstrap modal padding-right for hiding scroll */
body.modal-open .main-header,
body.modal-open .top-bar {
  padding-right: 17px !important;
}

@media (min-width: 768px) {
  body.modal-open:not(.n_chat) .main-header,
  body.modal-open:not(.n_chat) .top-bar {
    padding-right: 227px !important;
  }
}

/* -- */
@media (min-width: 1200px) {
  .main-wrapper,
  .top-bar,
  .main-header {
    padding-right: 210px;
  }

  body.n_chat .main-wrapper,
  body.n_chat .top-bar,
  body.n_chat .main-header {
    padding-right: 0;
  }
}
body.n_activated .main-header,
body.n_live .main-header {
  top: 50px; /* for top bar */
}
/* -- */

/* logo-wrapper */
.main-header .logo-wrapper {
  padding-left: 15px;
  padding-right: 20px;
  height: 70px;
  overflow: hidden;
  word-break: break-all;
}

.main-header .logo {
  display: inline-block;
  font-size: 20px;
  font-weight: 600;
  line-height: 70px;
  color: #fff;
  opacity: 1;
  text-transform: uppercase;
  transition: all 160ms;
  margin-bottom: 20px;
}

@media (max-width: 768px) {
  .main-header .logo.with-menu-icon {
    margin-left: 40px;
  }
}

.main-header .logo:hover {
  opacity: 0.8;
  text-decoration: none;
}

.main-header .logo img {
  width: 300px;
}

.main-header .menu-icon,
.main-header .home-icon {
  position: absolute;
  top: 10px;
  right: 0;
  display: block;
  text-align: center;
  color: #fff;
  height: 50px;
  padding: 15px 14px;
  line-height: 100%;
  border-radius: 4px;
}
.main-header .menu-icon:hover,
.main-header .home-icon:hover {
  background-color: rgba(255, 255, 255, 0.1);
}
.main-header .menu-icon {
  right: auto;
  left: 5px;
}
/* -- */

/* search-wrapper */
.main-header .search-wrapper {
  position: relative;
}
.main-header .search-input-icon {
  position: absolute;
  top: 13px;
  left: 12px;
  color: #96aad4;
}

.main-header .search-wrapper .form-control {
  height: 44px;
  margin-top: 13px;
  margin-bottom: 8px;
  padding-left: 34px;
  box-shadow: none;
  background: #202020;
  border: 0 none;
  border-radius: 8px;
  color: #fff;
  transition: all 160ms;
}

.main-header .search-wrapper .form-control:hover {
  background: #292929;
}

body.night-mode:not(.visitor) .main-header .search-wrapper .form-control {
  background: var(--body-bg-color-dark);
}
.main-header .search-wrapper .form-control::-webkit-input-placeholder {
  color: #fff;
}
.main-header .search-wrapper .form-control:-moz-placeholder {
  color: #fff;
  opacity: 1;
}
.main-header .search-wrapper .form-control:-ms-input-placeholder {
  color: #fff;
}
/* -- */

/* navbar-wrapper */
@media (min-width: 768px) {
  .navbar-wrapper {
    float: right;
  }
}
.navbar-wrapper > ul > li {
  float: left;
  display: block;
  width: 14.28571428571429%;
}
@media (min-width: 768px) {
  .navbar-wrapper > ul > li {
    width: auto !important;
    margin-right: 2px;
  }
  .navbar-wrapper > ul > li:last-child {
    margin-right: 0;
  }
}
body.visitor .navbar-wrapper > ul > li {
  width: auto;
}
.navbar-wrapper > ul > li > a {
  position: relative;
  display: block;
  text-align: center;
  color: #fff;
  height: 50px;
  margin-top: 10px;
  padding: 0 8px;
  line-height: 50px;
  border-radius: 4px;
}
.navbar-wrapper > ul > li > a:hover {
  background-color: rgba(255, 255, 255, 0.1);
}
body.night-mode .navbar-wrapper > ul > li > a:hover {
  background-color: rgba(0, 0, 0, 0.1);
}
.navbar-wrapper > ul > li.dropdown.show > a {
  background-color: rgba(255, 255, 255, 0.1);
}
body.night-mode .navbar-wrapper > ul > li.dropdown.show > a {
  background-color: #494c62;
}
@media (min-width: 992px) {
  .navbar-wrapper > ul > li > a {
    padding-right: 12px;
    padding-left: 12px;
  }
}
@media (min-width: 1200px) and (max-width: 1338px) {
  .navbar-wrapper > ul > li > a,
  .navbar-wrapper > ul > li > a.user-menu {
    padding-right: 8px;
    padding-left: 8px;
  }
}
.navbar-wrapper .counter {
  position: absolute;
  top: 5px;
  right: 0;
  padding: 2px 4px;
  color: #fff;
  font-size: 10px;
  line-height: 14px;
  font-weight: 600;
  border-radius: 3px;
}
.navbar-wrapper .counter.red {
  background: #ff5e3a;
}
.navbar-wrapper .counter.blue {
  background: #38a9ff;
}
.navbar-wrapper .counter.purple {
  background: #7c5ac2;
}

/* -- user-menu */
.navbar-wrapper .user-menu > img {
  display: inline-block;
  margin-top: -5px;
  height: 20px;
  width: 20px;
  border-radius: 50%;
}
@media (min-width: 768px) {
  .navbar-wrapper .user-menu > img {
    height: 25px;
    width: 25px;
  }
}
@media (min-width: 1400px) {
  .navbar-wrapper .user-menu > span {
    display: inline-block !important;
    max-width: 70px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

/* -- dropdown-menu */
.navbar-wrapper > ul > li.dropdown {
  position: static;
}
/* ... */

